# cryptopals

./: Cargo.toml
data/set3/: 1_plain.txt  3_cipher.txt  4_cipher.txt
src/: lib.rs  main.rs
src/s01/: aes_ecb.rs  key_xor_analyzer.rs  mod.rs  xor_analyzer.rs
src/s02/: admin.rs  aes_cbc.rs  cbc_padding_oracle.rs  ecb_decryption.rs  encryption_oracle.rs  mod.rs  oracle.rs  padding.rs
src/s03/: aes_ctr.rs  aes_ctr_fixed_nonce.rs  cbc_padding_oracle.rs  mod.rs  mt_rng.rs  mt_rng_ctr.rs  mt_rng_token.rs
src/s04/: cbc_iv_and_key.rs  ctr_admin.rs  ctr_seek.rs  hmac.rs  md4.rs  md4_length_extension.rs  mod.rs  sha1.rs  sha1_length_extension.rs  timing_oracle.rs
src/s05/: dh.rs  dh_mitm.rs  mod.rs  rsa.rs  simplified_srp.rs  srp.rs
src/s06/: dsa.rs  dsa_bad_parameters.rs  dsa_repeated_nonce.rs  mod.rs  pkcs1_5.rs  rsa_parity.rs  unpadded_oracle.rs
src/util/: algebra.rs  base_64.rs  bits.rs  generators.rs  integer.rs  mod.rs  progress_bar.rs  to_integer.rs  xor.rs
