[package]
name = "cryptopals"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
aes = "0.8.2"
indicatif = "0.17.3"
num-bigint = { version = "0.4", features = ["rand"] }
num-primes = { git = "https://github.com/Mietzsch/num-primes" }